# srpb

./: LICENSE  README.md  srpb.rosinstall
.github/workflows/: industrial_ci_action.yml
include/move_base/: benchmark_logger.h  people_logger.h  robot_data.h  robot_logger.h
postprocessing/: CMakeLists.txt  README.md  metrics.cpp
postprocessing/include/postprocessing/: metric.h  metric_gaussian.h  utils.h
postprocessing/include/postprocessing/metrics/: computational_efficiency.h  cumulative_heading_change.h  formation_space_instrusion.h  inplace_rotations.h  motion_efficiency.h  oscillations.h  path_linear_length.h  person_disturbance.h  personal_space_instrusion.h
postprocessing/scripts/: build.sh
postprocessing/src/: metric_evaluation.cpp  metric_gaussian.cpp  rewinder.cpp  utils.cpp
src/: people_logger.cpp
srpb_evaluation/: CMakeLists.txt  README.md  package.xml
srpb_evaluation/include/srpb_evaluation/: metric.h  metric_gaussian.h  rewinder.h  utils.h
srpb_evaluation/include/srpb_evaluation/metrics/: backward_movements.h  computational_efficiency.h  computational_time_repeatability.h  cumulative_heading_change.h  formation_space_instrusion.h  goal_reached.h  heading_change_smoothness.h  heading_direction_disturbance.h  inplace_rotations.h  motion_efficiency.h  obstacle_safety.h  oscillations.h  passing_speed_discomfort.h  path_linear_length.h  person_disturbance.h  personal_space_instrusion.h  velocity_smoothness.h
srpb_evaluation/scripts/: .gitignore  copy_logs.sh  create_excel_from_results.py  create_latex_table_from_results.py  evaluate_all_dirs.sh  evaluate_from_dir.sh  evaluate_newest.sh  excel_sheet_defines.py  rename_dirs_matching_pattern.sh  rewind_experiment.py  rewind_experiment.yaml  rewind_experiment_utils.py
srpb_evaluation/src/: main.cpp  metric_gaussian.cpp  rewinder.cpp  utils.cpp
srpb_evaluation/test/: test_metric_gaussian.cpp  test_rewinder.cpp  test_utils.cpp
srpb_logger/: CMakeLists.txt  package.xml
srpb_logger/include/srpb_logger/: benchmark_logger.h  global_planner_data.h  global_planner_logger.h  people_logger.h  robot_data.h  robot_logger.h
srpb_logger/src/: global_planner_logger.cpp  people_logger.cpp  robot_logger.cpp
srpb_logger/test/: test_global_planner_logger.cpp  test_people_logger.cpp  test_robot_logger.cpp
srpb_postprocessing/: CMakeLists.txt  README.md  package.xml
srpb_postprocessing/include/srpb_postprocessing/: metric.h  metric_gaussian.h  rewinder.h  utils.h
srpb_postprocessing/include/srpb_postprocessing/metrics/: backward_movements.h  computational_efficiency.h  cumulative_heading_change.h  formation_space_instrusion.h  inplace_rotations.h  motion_efficiency.h  obstacle_safety.h  oscillations.h  path_linear_length.h  person_disturbance.h  personal_space_instrusion.h  velocity_smoothness.h
srpb_postprocessing/src/: main.cpp  metric_evaluation.cpp  metric_gaussian.cpp  rewinder.cpp  utils.cpp
srpb_postprocessing/test/: test_rewinder.cpp
srpb_tooling/: CMakeLists.txt  README.md  package.xml
srpb_tooling/include/srpb_tooling/: obs_dist_calculator.h
srpb_tooling/src/: obs_dist_calculator.cpp
test/: test_people_logger.cpp
