<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
    <name>srpb_evaluation</name>
    <version>0.9.4</version>
    <description>

        The srpb_evaluation package provides implementation of metrics that allow evaluation of robot behaviour during navigation

    </description>
    <author>Jarosław Karwowski</author>
    <maintainer email="chromedivizer@gmail.com">Jarosław Karwowski</maintainer>

    <license>BSD-3</license>
    <url>https://github.com/rayvburn/srpb</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>angles</depend>
    <depend>geometry_msgs</depend>
    <depend>people_msgs</depend>
    <depend>people_msgs_utils</depend>
    <depend>roscpp</depend>
    <depend>social_nav_utils</depend>
    <depend>srpb_logger</depend>

</package>
